[gd_scene load_steps=10 format=2]

[ext_resource path="res://gameobjects/Player.gd" type="Script" id=1]
[ext_resource path="res://gameobjects/Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameobjects/player/player.png" type="Texture" id=3]
[ext_resource path="res://gameobjects/HitBox.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/Font.tres" type="DynamicFont" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 6.08276

[node name="Player" instance=ExtResource( 2 )]
script = ExtResource( 1 )
SPEED = 80
ACCELERATION = 0.5
attack_collision_layer = 2
max_health = 150

[node name="Sprite" parent="." index="0"]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="1"]
position = Vector2( 0, -64 )
current = true
smoothing_enabled = true

[node name="AnimationPlayer" parent="." index="2"]
anims/Up = SubResource( 1 )

[node name="HurtBox" parent="." index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer" index="0"]
margin_bottom = 256.0

[node name="AbilitiesContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer" index="1"]
margin_left = 4.0
margin_right = 252.0
margin_bottom = 256.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ColorRect" parent="CanvasLayer/HBoxContainer/AbilitiesContainer" index="0"]
margin_top = 244.0
margin_right = 248.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 8 )
color = Color( 1, 0, 0.301961, 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HBoxContainer/AbilitiesContainer/HealthBar" index="0"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/AbilitiesContainer/HealthBar" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 15 )
text = "10 / 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/AbilitiesContainer" index="1"]
margin_top = 256.0
margin_right = 248.0
margin_bottom = 256.0

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HBoxContainer" index="2"]
margin_left = 256.0
margin_right = 256.0
margin_bottom = 256.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer" index="0"]
margin_right = 256.0

[node name="Items" parent="CanvasLayer/VBoxContainer" index="1"]
margin_top = 4.0
margin_bottom = 4.0
mouse_filter = 2

[node name="Ticker" parent="." index="7"]
wait_time = 1.0

[node name="ItemPickupRadius" parent="." index="8" instance=ExtResource( 14 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupRadius" index="0"]
shape = SubResource( 3 )

[node name="BeamHurtBox" parent="." index="9" instance=ExtResource( 14 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeamHurtBox" index="0"]
shape = SubResource( 4 )
[connection signal="area_entered" from="ItemPickupRadius" to="." method="_on_ItemPickupRadius_area_entered"]
